Quorum/Library/Tests/TypeChecker/Pass/ExpAssignBooleanBooleanField.quorum
class Main
    boolean b = false
    boolean bool = false
    action Main
        b = true
        bool = cast(boolean, b)
        if bool = true
            output "passed"
        end
    end
end