Quorum/Library/Tests/TypeChecker/Fail/ExpAssignBooleanUndefinedField.quorum
class Main
    boolean bool = false
    action Main
        bool = cast(boolean, undefined)
    end
end